books/projects/rac/src/program/parser/parser.output
Terminals unused in grammar

    WHILE
    DO


State 69 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce
State 339 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program program_element
    2        | program_element

    3 program_element: type_dec ';'
    4                | const_dec ';'
    5                | func_def

    6 type_dec: typedef_dec
    7         | STRUCT ID struct_type
    8         | ENUM ID enum_type

    9 typedef_dec: TYPEDEF typedef_type ID
   10            | typedef_dec '[' arithmetic_expression ']'

   11 typedef_type: primitive_type
   12             | register_type
   13             | array_param_type
   14             | mv_type
   15             | TYPEID

   16 type_spec: typedef_type
   17          | STRUCT struct_type
   18          | ENUM enum_type

   19 primitive_type: INT
   20               | UINT
   21               | INT64
   22               | UINT64
   23               | BOOL

   24 register_type: AC_FIXED
   25              | AC_INT '<' arithmetic_expression ',' boolean '>'

   26 array_param_type: ARRAY '<' type_spec ',' arithmetic_expression '>'

   27 struct_type: '{' struct_field_list '}'

   28 struct_field_list: struct_field
   29                  | struct_field_list struct_field

   30 struct_field: type_spec ID ';'

   31 enum_type: '{' enum_const_dec_list '}'

   32 enum_const_dec_list: enum_const_dec
   33                    | enum_const_dec_list ',' enum_const_dec

   34 enum_const_dec: ID
   35               | ID '=' expression

   36 mv_type: TUPLE '<' type_spec mv_type_rest

   37 mv_type_rest: '>'
   38             | ',' type_spec mv_type_rest

   39 primary_expression: constant
   40                   | symbol_ref
   41                   | funcall
   42                   | '(' expression ')'

   43 constant: integer
   44         | boolean

   45 integer: NAT
   46        | '-' NAT

   47 boolean: TRUE
   48        | FALSE

   49 symbol_ref: ID

   50 funcall: ID '(' expr_list ')'
   51        | TEMPLATEID '<' arith_expr_list '>' '(' arith_expr_list ')'

   52 postfix_expression: primary_expression
   53                   | array_or_bit_ref
   54                   | struct_ref
   55                   | subrange

   56 array_or_bit_ref: postfix_expression '[' expression ']'

   57 struct_ref: postfix_expression '.' ID

   58 subrange: postfix_expression '.' SLC '<' NAT '>' '(' expression ')'

   59 prefix_expression: postfix_expression
   60                  | unary_op prefix_expression
   61                  | '(' type_spec ')' prefix_expression
   62                  | type_spec '(' expression ')'

   63 unary_op: '+'
   64         | '-'
   65         | '~'
   66         | '!'

   67 mult_expression: prefix_expression
   68                | mult_expression '*' prefix_expression
   69                | mult_expression '/' prefix_expression
   70                | mult_expression '%' prefix_expression

   71 add_expression: mult_expression
   72               | add_expression '+' mult_expression
   73               | add_expression '-' mult_expression

   74 arithmetic_expression: add_expression
   75                      | arithmetic_expression LSHFT_OP add_expression
   76                      | arithmetic_expression RSHFT_OP add_expression

   77 rel_expression: arithmetic_expression
   78               | rel_expression '<' arithmetic_expression
   79               | rel_expression '>' arithmetic_expression
   80               | rel_expression LE_OP arithmetic_expression
   81               | rel_expression GE_OP arithmetic_expression

   82 eq_expression: rel_expression
   83              | eq_expression EQ_OP rel_expression
   84              | eq_expression NE_OP rel_expression

   85 and_expression: eq_expression
   86               | and_expression '&' eq_expression

   87 xor_expression: and_expression
   88               | xor_expression '^' and_expression

   89 ior_expression: xor_expression
   90               | ior_expression '|' xor_expression

   91 log_and_expression: ior_expression
   92                   | log_and_expression AND_OP ior_expression

   93 log_or_expression: log_and_expression
   94                  | log_or_expression OR_OP log_and_expression

   95 cond_expression: log_or_expression
   96                | log_or_expression '?' expression ':' cond_expression

   97 mv_expression: mv_type '(' expr_list ')'

   98 expression: cond_expression
   99           | mv_expression

  100 expr_list: %empty
  101          | nontrivial_expr_list

  102 nontrivial_expr_list: expression
  103                     | nontrivial_expr_list ',' expression

  104 arith_expr_list: %empty
  105                | nontrivial_arith_expr_list

  106 nontrivial_arith_expr_list: arithmetic_expression
  107                           | nontrivial_arith_expr_list ',' arithmetic_expression

  108 statement: simple_statement ';'
  109          | block
  110          | for_statement
  111          | if_statement
  112          | switch_statement

  113 r_statement: final_statement
  114            | r_block

  115 simple_statement: var_dec
  116                 | const_dec
  117                 | multiple_var_dec
  118                 | multiple_const_dec
  119                 | break_statement
  120                 | assignment
  121                 | multiple_assignment
  122                 | assertion
  123                 | null_statement

  124 var_dec: type_spec untyped_var_dec

  125 untyped_var_dec: ID
  126                | ID '=' expression
  127                | ID '=' array_or_struct_init
  128                | ID '[' arithmetic_expression ']'
  129                | ID '[' arithmetic_expression ']' '=' array_or_struct_init

  130 array_or_struct_init: '{' init_list '}'
  131                     | '{' '}'

  132 init_list: expression
  133          | init_list ',' expression

  134 const_dec: CONST type_spec untyped_const_dec

  135 untyped_const_dec: ID '=' expression
  136                  | ID '=' array_or_struct_init
  137                  | ID '[' arithmetic_expression ']' '=' array_or_struct_init

  138 multiple_var_dec: var_dec ',' untyped_var_dec
  139                 | multiple_var_dec ',' untyped_var_dec

  140 multiple_const_dec: const_dec ',' untyped_const_dec
  141                   | multiple_const_dec ',' untyped_const_dec

  142 break_statement: BREAK

  143 return_statement: RETURN
  144                 | RETURN expression

  145 assignment: expression assign_op expression
  146           | expression inc_op
  147           | postfix_expression '.' SET_SLC '(' expression ',' expression ')'

  148 assign_op: '='
  149          | RSHFT_ASSIGN
  150          | LSHFT_ASSIGN
  151          | ADD_ASSIGN
  152          | SUB_ASSIGN
  153          | MUL_ASSIGN
  154          | MOD_ASSIGN
  155          | AND_ASSIGN
  156          | XOR_ASSIGN
  157          | OR_ASSIGN

  158 inc_op: INC_OP
  159       | DEC_OP

  160 multiple_assignment: TIE '(' nontrivial_expr_list ')' '=' postfix_expression

  161 assertion: ASSERT '(' expression ')'

  162 null_statement: %empty

  163 dummy: %empty

  164 block: '{' dummy statement_list '}'

  165 r_block: '{' dummy r_statement_list '}'

  166 statement_list: %empty
  167               | statement_list statement

  168 r_statement_list: statement_list final_statement

  169 $@1: %empty

  170 for_statement: FOR $@1 '(' for_init ';' expression ';' assignment ')' statement

  171 for_init: var_dec
  172         | assignment

  173 if_statement: IF '(' expression ')' statement ELSE statement
  174             | IF '(' expression ')' statement

  175 switch_statement: SWITCH '(' expression ')' '{' case_list '}'

  176 case_list: case
  177          | case_list case

  178 case: CASE case_label ':' statement_list
  179     | DEFAULT ':' statement_list

  180 case_label: constant
  181           | symbol_ref

  182 final_statement: return_statement ';'
  183                | IF '(' expression ')' r_statement ELSE r_statement

  184 $@2: %empty

  185 func_def: type_spec ID $@2 '(' param_dec_list ')' '{' r_statement_list '}'
  186         | func_template

  187 param_dec_list: %empty
  188               | nontrivial_param_dec_list

  189 nontrivial_param_dec_list: var_dec
  190                          | nontrivial_param_dec_list ',' var_dec

  191 $@3: %empty

  192 func_template: TEMPLATE $@3 '<' template_param_dec_list '>' type_spec ID '(' param_dec_list ')' r_block

  193 template_param_dec_list: %empty
  194                        | nontrivial_template_param_dec_list

  195 nontrivial_template_param_dec_list: template_param_dec
  196                                   | nontrivial_template_param_dec_list ',' template_param_dec

  197 template_param_dec: type_spec ID


Terminals, with rules where they appear

    $end (0) 0
    '!' <s> (33) 66
    '%' <s> (37) 70
    '&' <s> (38) 86
    '(' (40) 42 50 51 58 61 62 97 147 160 161 170 173 174 175 183 185 192
    ')' (41) 42 50 51 58 61 62 97 147 160 161 170 173 174 175 183 185 192
    '*' <s> (42) 68
    '+' <s> (43) 63 72
    ',' (44) 25 26 33 38 103 107 133 138 139 140 141 147 190 196
    '-' <s> (45) 46 64 73
    '.' (46) 57 58 147
    '/' <s> (47) 69
    ':' (58) 96 178 179
    ';' (59) 3 4 30 108 170 182
    '<' <s> (60) 25 26 36 51 58 78 192
    '=' <s> (61) 35 126 127 129 135 136 137 148 160
    '>' <s> (62) 25 26 37 51 58 79 192
    '?' (63) 96
    '[' (91) 10 56 128 129 137
    ']' (93) 10 56 128 129 137
    '^' <s> (94) 88
    '{' (123) 27 31 130 131 164 165 175 185
    '|' <s> (124) 90
    '}' (125) 27 31 130 131 164 165 175 185
    '~' <s> (126) 65
    error (256)
    TYPEDEF (258) 9
    CONST (259) 134
    STRUCT (260) 7 17
    ENUM (261) 8 18
    TEMPLATE (262) 192
    INT (263) 19
    UINT (264) 20
    INT64 (265) 21
    UINT64 (266) 22
    BOOL (267) 23
    SLC (268) 58
    SET_SLC (269) 147
    FOR (270) 170
    IF (271) 173 174 183
    ELSE (272) 173 183
    WHILE (273)
    DO (274)
    SWITCH (275) 175
    CASE (276) 178
    DEFAULT (277) 179
    BREAK (278) 142
    RETURN (279) 143 144
    ASSERT (280) 161
    ARRAY (281) 26
    TUPLE (282) 36
    TIE (283) 160
    AC_INT (284) 25
    AC_FIXED (285) 24
    RSHFT_ASSIGN <s> (286) 149
    LSHFT_ASSIGN <s> (287) 150
    ADD_ASSIGN <s> (288) 151
    SUB_ASSIGN <s> (289) 152
    MUL_ASSIGN <s> (290) 153
    MOD_ASSIGN <s> (291) 154
    AND_ASSIGN <s> (292) 155
    XOR_ASSIGN <s> (293) 156
    OR_ASSIGN <s> (294) 157
    INC_OP <s> (295) 158
    DEC_OP <s> (296) 159
    RSHFT_OP <s> (297) 76
    LSHFT_OP <s> (298) 75
    AND_OP <s> (299) 92
    OR_OP <s> (300) 94
    LE_OP <s> (301) 80
    GE_OP <s> (302) 81
    EQ_OP <s> (303) 83
    NE_OP <s> (304) 84
    ID <s> (305) 7 8 9 30 34 35 49 50 57 125 126 127 128 129 135 136 137 185 192 197
    NAT <s> (306) 45 46 58
    TRUE <s> (307) 47
    FALSE <s> (308) 48
    TYPEID <s> (309) 15
    TEMPLATEID <s> (310) 51


Nonterminals, with rules where they appear

    $accept (80)
        on left: 0
    program (81)
        on left: 1 2
        on right: 0 1
    program_element (82)
        on left: 3 4 5
        on right: 1 2
    type_dec <defined_type> (83)
        on left: 6 7 8
        on right: 3
    typedef_dec <defined_type> (84)
        on left: 9 10
        on right: 6 10
    typedef_type <type> (85)
        on left: 11 12 13 14 15
        on right: 9 16
    type_spec <type> (86)
        on left: 16 17 18
        on right: 26 30 36 38 61 62 124 134 185 192 197
    primitive_type <type> (87)
        on left: 19 20 21 22 23
        on right: 11
    register_type <type> (88)
        on left: 24 25
        on right: 12
    array_param_type <type> (89)
        on left: 26
        on right: 13
    struct_type <type> (90)
        on left: 27
        on right: 7 17
    struct_field_list <sfl> (91)
        on left: 28 29
        on right: 27 29
    struct_field <sf> (92)
        on left: 30
        on right: 28 29
    enum_type <type> (93)
        on left: 31
        on right: 8 18
    enum_const_dec_list <ecdl> (94)
        on left: 32 33
        on right: 31 33
    enum_const_dec <ecd> (95)
        on left: 34 35
        on right: 32 33
    mv_type <mvtype> (96)
        on left: 36
        on right: 14 97
    mv_type_rest <vl> (97)
        on left: 37 38
        on right: 36 38
    primary_expression <exp> (98)
        on left: 39 40 41 42
        on right: 52
    constant <exp> (99)
        on left: 43 44
        on right: 39 180
    integer <exp> (100)
        on left: 45 46
        on right: 43
    boolean <b> (101)
        on left: 47 48
        on right: 25 44
    symbol_ref <exp> (102)
        on left: 49
        on right: 40 181
    funcall <exp> (103)
        on left: 50 51
        on right: 41
    postfix_expression <exp> (104)
        on left: 52 53 54 55
        on right: 56 57 58 59 147 160
    array_or_bit_ref <exp> (105)
        on left: 56
        on right: 53
    struct_ref <exp> (106)
        on left: 57
        on right: 54
    subrange <exp> (107)
        on left: 58
        on right: 55
    prefix_expression <exp> (108)
        on left: 59 60 61 62
        on right: 60 61 67 68 69 70
    unary_op <s> (109)
        on left: 63 64 65 66
        on right: 60
    mult_expression <exp> (110)
        on left: 67 68 69 70
        on right: 68 69 70 71 72 73
    add_expression <exp> (111)
        on left: 71 72 73
        on right: 72 73 74 75 76
    arithmetic_expression <exp> (112)
        on left: 74 75 76
        on right: 10 25 26 75 76 77 78 79 80 81 106 107 128 129 137
    rel_expression <exp> (113)
        on left: 77 78 79 80 81
        on right: 78 79 80 81 82 83 84
    eq_expression <exp> (114)
        on left: 82 83 84
        on right: 83 84 85 86
    and_expression <exp> (115)
        on left: 85 86
        on right: 86 87 88
    xor_expression <exp> (116)
        on left: 87 88
        on right: 88 89 90
    ior_expression <exp> (117)
        on left: 89 90
        on right: 90 91 92
    log_and_expression <exp> (118)
        on left: 91 92
        on right: 92 93 94
    log_or_expression <exp> (119)
        on left: 93 94
        on right: 94 95 96
    cond_expression <exp> (120)
        on left: 95 96
        on right: 96 98
    mv_expression <exp> (121)
        on left: 97
        on right: 99
    expression <exp> (122)
        on left: 98 99
        on right: 35 42 56 58 62 96 102 103 126 132 133 135 144 145 146 147 161 170 173 174 175 183
    expr_list <expl> (123)
        on left: 100 101
        on right: 50 97
    nontrivial_expr_list <expl> (124)
        on left: 102 103
        on right: 101 103 160
    arith_expr_list <expl> (125)
        on left: 104 105
        on right: 51
    nontrivial_arith_expr_list <expl> (126)
        on left: 106 107
        on right: 105 107
    statement <stm> (127)
        on left: 108 109 110 111 112
        on right: 167 170 173 174
    r_statement <stm> (128)
        on left: 113 114
        on right: 183
    simple_statement <stm> (129)
        on left: 115 116 117 118 119 120 121 122 123
        on right: 108
    var_dec <stm> (130)
        on left: 124
        on right: 115 138 171 189 190
    untyped_var_dec <stm> (131)
        on left: 125 126 127 128 129
        on right: 124 138 139
    array_or_struct_init <exp> (132)
        on left: 130 131
        on right: 127 129 136 137
    init_list <initl> (133)
        on left: 132 133
        on right: 130 133
    const_dec <stm> (134)
        on left: 134
        on right: 4 116 140
    untyped_const_dec <stm> (135)
        on left: 135 136 137
        on right: 134 140 141
    multiple_var_dec <stm> (136)
        on left: 138 139
        on right: 117 139
    multiple_const_dec <stm> (137)
        on left: 140 141
        on right: 118 141
    break_statement <stm> (138)
        on left: 142
        on right: 119
    return_statement <stm> (139)
        on left: 143 144
        on right: 182
    assignment <stm> (140)
        on left: 145 146 147
        on right: 120 170 172
    assign_op <s> (141)
        on left: 148 149 150 151 152 153 154 155 156 157
        on right: 145
    inc_op <s> (142)
        on left: 158 159
        on right: 146
    multiple_assignment <stm> (143)
        on left: 160
        on right: 121
    assertion <stm> (144)
        on left: 161
        on right: 122
    null_statement <stm> (145)
        on left: 162
        on right: 123
    dummy (146)
        on left: 163
        on right: 164 165
    block <stm> (147)
        on left: 164
        on right: 109
    r_block <stm> (148)
        on left: 165
        on right: 114 192
    statement_list <stml> (149)
        on left: 166 167
        on right: 164 167 168 178 179
    r_statement_list <stml> (150)
        on left: 168
        on right: 165 185
    for_statement <stm> (151)
        on left: 170
        on right: 110
    $@1 (152)
        on left: 169
        on right: 170
    for_init <stm> (153)
        on left: 171 172
        on right: 170
    if_statement <stm> (154)
        on left: 173 174
        on right: 111
    switch_statement <stm> (155)
        on left: 175
        on right: 112
    case_list <cl> (156)
        on left: 176 177
        on right: 175 177
    case <c> (157)
        on left: 178 179
        on right: 176 177
    case_label <exp> (158)
        on left: 180 181
        on right: 178
    final_statement <stm> (159)
        on left: 182 183
        on right: 113 168
    func_def <fd> (160)
        on left: 185 186
        on right: 5
    $@2 (161)
        on left: 184
        on right: 185
    param_dec_list <vdl> (162)
        on left: 187 188
        on right: 185 192
    nontrivial_param_dec_list <vdl> (163)
        on left: 189 190
        on right: 188 190
    func_template <fd> (164)
        on left: 192
        on right: 186
    $@3 (165)
        on left: 191
        on right: 192
    template_param_dec_list <tdl> (166)
        on left: 193 194
        on right: 192
    nontrivial_template_param_dec_list <tdl> (167)
        on left: 195 196
        on right: 194 196
    template_param_dec <tpd> (168)
        on left: 197
        on right: 195 196


State 0

    0 $accept: . program $end

    TYPEDEF   shift, and go to state 1
    CONST     shift, and go to state 2
    STRUCT    shift, and go to state 3
    ENUM      shift, and go to state 4
    TEMPLATE  shift, and go to state 5
    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15

    program           go to state 16
    program_element   go to state 17
    type_dec          go to state 18
    typedef_dec       go to state 19
    typedef_type      go to state 20
    type_spec         go to state 21
    primitive_type    go to state 22
    register_type     go to state 23
    array_param_type  go to state 24
    mv_type           go to state 25
    const_dec         go to state 26
    func_def          go to state 27
    func_template     go to state 28


State 1

    9 typedef_dec: TYPEDEF . typedef_type ID

    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15

    typedef_type      go to state 29
    primitive_type    go to state 22
    register_type     go to state 23
    array_param_type  go to state 24
    mv_type           go to state 25


State 2

  134 const_dec: CONST . type_spec untyped_const_dec

    STRUCT    shift, and go to state 30
    ENUM      shift, and go to state 31
    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15

    typedef_type      go to state 20
    type_spec         go to state 32
    primitive_type    go to state 22
    register_type     go to state 23
    array_param_type  go to state 24
    mv_type           go to state 25


State 3

    7 type_dec: STRUCT . ID struct_type
   17 type_spec: STRUCT . struct_type

    ID   shift, and go to state 33
    '{'  shift, and go to state 34

    struct_type  go to state 35


State 4

    8 type_dec: ENUM . ID enum_type
   18 type_spec: ENUM . enum_type

    ID   shift, and go to state 36
    '{'  shift, and go to state 37

    enum_type  go to state 38


State 5

  192 func_template: TEMPLATE . $@3 '<' template_param_dec_list '>' type_spec ID '(' param_dec_list ')' r_block

    $default  reduce using rule 191 ($@3)

    $@3  go to state 39


State 6

   19 primitive_type: INT .

    $default  reduce using rule 19 (primitive_type)


State 7

   20 primitive_type: UINT .

    $default  reduce using rule 20 (primitive_type)


State 8

   21 primitive_type: INT64 .

    $default  reduce using rule 21 (primitive_type)


State 9

   22 primitive_type: UINT64 .

    $default  reduce using rule 22 (primitive_type)


State 10

   23 primitive_type: BOOL .

    $default  reduce using rule 23 (primitive_type)


State 11

   26 array_param_type: ARRAY . '<' type_spec ',' arithmetic_expression '>'

    '<'  shift, and go to state 40


State 12

   36 mv_type: TUPLE . '<' type_spec mv_type_rest

    '<'  shift, and go to state 41


State 13

   25 register_type: AC_INT . '<' arithmetic_expression ',' boolean '>'

    '<'  shift, and go to state 42


State 14

   24 register_type: AC_FIXED .

    $default  reduce using rule 24 (register_type)


State 15

   15 typedef_type: TYPEID .

    $default  reduce using rule 15 (typedef_type)


State 16

    0 $accept: program . $end
    1 program: program . program_element

    $end      shift, and go to state 43
    TYPEDEF   shift, and go to state 1
    CONST     shift, and go to state 2
    STRUCT    shift, and go to state 3
    ENUM      shift, and go to state 4
    TEMPLATE  shift, and go to state 5
    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15

    program_element   go to state 44
    type_dec          go to state 18
    typedef_dec       go to state 19
    typedef_type      go to state 20
    type_spec         go to state 21
    primitive_type    go to state 22
    register_type     go to state 23
    array_param_type  go to state 24
    mv_type           go to state 25
    const_dec         go to state 26
    func_def          go to state 27
    func_template     go to state 28


State 17

    2 program: program_element .

    $default  reduce using rule 2 (program)


State 18

    3 program_element: type_dec . ';'

    ';'  shift, and go to state 45


State 19

    6 type_dec: typedef_dec .
   10 typedef_dec: typedef_dec . '[' arithmetic_expression ']'

    '['  shift, and go to state 46

    $default  reduce using rule 6 (type_dec)


State 20

   16 type_spec: typedef_type .

    $default  reduce using rule 16 (type_spec)


State 21

  185 func_def: type_spec . ID $@2 '(' param_dec_list ')' '{' r_statement_list '}'

    ID  shift, and go to state 47


State 22

   11 typedef_type: primitive_type .

    $default  reduce using rule 11 (typedef_type)


State 23

   12 typedef_type: register_type .

    $default  reduce using rule 12 (typedef_type)


State 24

   13 typedef_type: array_param_type .

    $default  reduce using rule 13 (typedef_type)


State 25

   14 typedef_type: mv_type .

    $default  reduce using rule 14 (typedef_type)


State 26

    4 program_element: const_dec . ';'

    ';'  shift, and go to state 48


State 27

    5 program_element: func_def .

    $default  reduce using rule 5 (program_element)


State 28

  186 func_def: func_template .

    $default  reduce using rule 186 (func_def)


State 29

    9 typedef_dec: TYPEDEF typedef_type . ID

    ID  shift, and go to state 49


State 30

   17 type_spec: STRUCT . struct_type

    '{'  shift, and go to state 34

    struct_type  go to state 35


State 31

   18 type_spec: ENUM . enum_type

    '{'  shift, and go to state 37

    enum_type  go to state 38


State 32

  134 const_dec: CONST type_spec . untyped_const_dec

    ID  shift, and go to state 50

    untyped_const_dec  go to state 51


State 33

    7 type_dec: STRUCT ID . struct_type

    '{'  shift, and go to state 34

    struct_type  go to state 52


State 34

   27 struct_type: '{' . struct_field_list '}'

    STRUCT    shift, and go to state 30
    ENUM      shift, and go to state 31
    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15

    typedef_type       go to state 20
    type_spec          go to state 53
    primitive_type     go to state 22
    register_type      go to state 23
    array_param_type   go to state 24
    struct_field_list  go to state 54
    struct_field       go to state 55
    mv_type            go to state 25


State 35

   17 type_spec: STRUCT struct_type .

    $default  reduce using rule 17 (type_spec)


State 36

    8 type_dec: ENUM ID . enum_type

    '{'  shift, and go to state 37

    enum_type  go to state 56


State 37

   31 enum_type: '{' . enum_const_dec_list '}'

    ID  shift, and go to state 57

    enum_const_dec_list  go to state 58
    enum_const_dec       go to state 59


State 38

   18 type_spec: ENUM enum_type .

    $default  reduce using rule 18 (type_spec)


State 39

  192 func_template: TEMPLATE $@3 . '<' template_param_dec_list '>' type_spec ID '(' param_dec_list ')' r_block

    '<'  shift, and go to state 60


State 40

   26 array_param_type: ARRAY '<' . type_spec ',' arithmetic_expression '>'

    STRUCT    shift, and go to state 30
    ENUM      shift, and go to state 31
    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15

    typedef_type      go to state 20
    type_spec         go to state 61
    primitive_type    go to state 22
    register_type     go to state 23
    array_param_type  go to state 24
    mv_type           go to state 25


State 41

   36 mv_type: TUPLE '<' . type_spec mv_type_rest

    STRUCT    shift, and go to state 30
    ENUM      shift, and go to state 31
    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15

    typedef_type      go to state 20
    type_spec         go to state 62
    primitive_type    go to state 22
    register_type     go to state 23
    array_param_type  go to state 24
    mv_type           go to state 25


State 42

   25 register_type: AC_INT '<' . arithmetic_expression ',' boolean '>'

    STRUCT      shift, and go to state 30
    ENUM        shift, and go to state 31
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    AC_INT      shift, and go to state 13
    AC_FIXED    shift, and go to state 14
    ID          shift, and go to state 63
    NAT         shift, and go to state 64
    TRUE        shift, and go to state 65
    FALSE       shift, and go to state 66
    TYPEID      shift, and go to state 15
    TEMPLATEID  shift, and go to state 67
    '+'         shift, and go to state 68
    '-'         shift, and go to state 69
    '!'         shift, and go to state 70
    '~'         shift, and go to state 71
    '('         shift, and go to state 72

    typedef_type           go to state 20
    type_spec              go to state 73
    primitive_type         go to state 22
    register_type          go to state 23
    array_param_type       go to state 24
    mv_type                go to state 25
    primary_expression     go to state 74
    constant               go to state 75
    integer                go to state 76
    boolean                go to state 77
    symbol_ref             go to state 78
    funcall                go to state 79
    postfix_expression     go to state 80
    array_or_bit_ref       go to state 81
    struct_ref             go to state 82
    subrange               go to state 83
    prefix_expression      go to state 84
    unary_op               go to state 85
    mult_expression        go to state 86
    add_expression         go to state 87
    arithmetic_expression  go to state 88


State 43

    0 $accept: program $end .

    $default  accept


State 44

    1 program: program program_element .

    $default  reduce using rule 1 (program)


State 45

    3 program_element: type_dec ';' .

    $default  reduce using rule 3 (program_element)


State 46

   10 typedef_dec: typedef_dec '[' . arithmetic_expression ']'

    STRUCT      shift, and go to state 30
    ENUM        shift, and go to state 31
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    AC_INT      shift, and go to state 13
    AC_FIXED    shift, and go to state 14
    ID          shift, and go to state 63
    NAT         shift, and go to state 64
    TRUE        shift, and go to state 65
    FALSE       shift, and go to state 66
    TYPEID      shift, and go to state 15
    TEMPLATEID  shift, and go to state 67
    '+'         shift, and go to state 68
    '-'         shift, and go to state 69
    '!'         shift, and go to state 70
    '~'         shift, and go to state 71
    '('         shift, and go to state 72

    typedef_type           go to state 20
    type_spec              go to state 73
    primitive_type         go to state 22
    register_type          go to state 23
    array_param_type       go to state 24
    mv_type                go to state 25
    primary_expression     go to state 74
    constant               go to state 75
    integer                go to state 76
    boolean                go to state 77
    symbol_ref             go to state 78
    funcall                go to state 79
    postfix_expression     go to state 80
    array_or_bit_ref       go to state 81
    struct_ref             go to state 82
    subrange               go to state 83
    prefix_expression      go to state 84
    unary_op               go to state 85
    mult_expression        go to state 86
    add_expression         go to state 87
    arithmetic_expression  go to state 89


State 47

  185 func_def: type_spec ID . $@2 '(' param_dec_list ')' '{' r_statement_list '}'

    $default  reduce using rule 184 ($@2)

    $@2  go to state 90


State 48

    4 program_element: const_dec ';' .

    $default  reduce using rule 4 (program_element)


State 49

    9 typedef_dec: TYPEDEF typedef_type ID .

    $default  reduce using rule 9 (typedef_dec)


State 50

  135 untyped_const_dec: ID . '=' expression
  136                  | ID . '=' array_or_struct_init
  137                  | ID . '[' arithmetic_expression ']' '=' array_or_struct_init

    '='  shift, and go to state 91
    '['  shift, and go to state 92


State 51

  134 const_dec: CONST type_spec untyped_const_dec .

    $default  reduce using rule 134 (const_dec)


State 52

    7 type_dec: STRUCT ID struct_type .

    $default  reduce using rule 7 (type_dec)


State 53

   30 struct_field: type_spec . ID ';'

    ID  shift, and go to state 93


State 54

   27 struct_type: '{' struct_field_list . '}'
   29 struct_field_list: struct_field_list . struct_field

    STRUCT    shift, and go to state 30
    ENUM      shift, and go to state 31
    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15
    '}'       shift, and go to state 94

    typedef_type      go to state 20
    type_spec         go to state 53
    primitive_type    go to state 22
    register_type     go to state 23
    array_param_type  go to state 24
    struct_field      go to state 95
    mv_type           go to state 25


State 55

   28 struct_field_list: struct_field .

    $default  reduce using rule 28 (struct_field_list)


State 56

    8 type_dec: ENUM ID enum_type .

    $default  reduce using rule 8 (type_dec)


State 57

   34 enum_const_dec: ID .
   35               | ID . '=' expression

    '='  shift, and go to state 96

    $default  reduce using rule 34 (enum_const_dec)


State 58

   31 enum_type: '{' enum_const_dec_list . '}'
   33 enum_const_dec_list: enum_const_dec_list . ',' enum_const_dec

    ','  shift, and go to state 97
    '}'  shift, and go to state 98


State 59

   32 enum_const_dec_list: enum_const_dec .

    $default  reduce using rule 32 (enum_const_dec_list)


State 60

  192 func_template: TEMPLATE $@3 '<' . template_param_dec_list '>' type_spec ID '(' param_dec_list ')' r_block

    STRUCT    shift, and go to state 30
    ENUM      shift, and go to state 31
    INT       shift, and go to state 6
    UINT      shift, and go to state 7
    INT64     shift, and go to state 8
    UINT64    shift, and go to state 9
    BOOL      shift, and go to state 10
    ARRAY     shift, and go to state 11
    TUPLE     shift, and go to state 12
    AC_INT    shift, and go to state 13
    AC_FIXED  shift, and go to state 14
    TYPEID    shift, and go to state 15

    $default  reduce using rule 193 (template_param_dec_list)
